recursion.cons.lessons.recursion.cons.IsMember.scala.code
def isMember(l:List[Int], v:Int): Boolean = {
	if (l==Nil){
		return false
	} else {
		if (l==v){
			return true
		}
	}
			
	

}
